--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <h2>Contact Me</h2>
     <p class="contact-info">📧 <a href="mailto:bhattabhay19@gmail.com">bhattabhay19@gmail.com</a></p>
     <p class="contact-info">📞 <a href="tel:+918923989353">+91-8923989353</a></p>
-    <p class="contact-info">🔗 <a href="https://www.linkedin.com/in/abhay-bhatt/" target="_blank">LinkedIn</a> |
+    <p class="contact-info">🔗 <a href="https://www.linkedin.com/in/abhay-bhatt-63760925a/" target="_blank">LinkedIn</a> |
        💻 <a href="https://github.com/Abhay-Bhatt" target="_blank">GitHub</a> |
        🧠 <a href="https://leetcode.com/u/Abhay000/" target="_blank">LeetCode</a>
     </p>
@@ -379,3 +379,4 @@
   </script>
 </body>
 </html>
+
